# crud.rs

./: .eslintignore  Cargo.toml  Dockerfile  Makefile  README.md  curl.txt  curl_requests.txt  docker-compose.yml  dprint.json  package.json  pnpm-lock.yaml
apps/client/: package.json  pnpm-lock.yaml  tailwind.config.ts
apps/client/src/components/: Header.astro
apps/client/src/pages/: index.astro
apps/server/: Cargo.toml  Dockerfile  diesel.toml
apps/server/src/: lib.rs  schema.rs
apps/server/src/core/: types.rs
apps/server/src/routes/: config.rs
migrations/2024-07-12-165319_create_posts/: up.sql
migrations/2024-07-16-005712_create_users/: up.sql
migrations/2024-07-16-005935_create_posts/: up.sql
src/: db.rs  lib.rs  main.rs  schema.rs
src/core/: constants.rs  error.rs  mod.rs  response.rs
src/core/middlewares/: auth.rs  cors.rs
src/features/auth/: controller.rs
src/features/auth/models/: auth_token.rs  login.rs  mod.rs
src/features/auth/repository/: auth.rs
src/features/auth/service/: auth.rs
src/features/post/: controller.rs
src/features/post/models/: post.rs
src/features/post/service/: post.rs
src/features/user/: controller.rs  mod.rs
src/features/user/entity/: user.rs
src/features/user/models/: user.rs
src/features/user/repository/: user.rs
src/features/user/service/: user.rs
src/models/: post.rs  user.rs
src/routes/: config.rs  health.rs  mod.rs  not_found.rs  post.rs
src/services/post/: create.rs  delete.rs  read.rs  update.rs
src/services/user/: create.rs
src/shared/: post.rs
(+7 files in other folders)
