[package]
name = "rust_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
custom_error = "1.9.2"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
lazy_static = "1.5.0"
listenfd = "1.0.1"
postgres = "0.19.7"
r2d2 = "0.8.10"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = "0.7.4"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
