[package]
name = "rust_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.18"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
postgres = "0.19.7"
r2d2 = "0.8.10"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
